Fix Timeline icon issue

--- a/_sass/timeline.sass
+++ b/_sass/timeline.sass
@@ -46,6 +46,7 @@ $dimensions: 16 24 32 48 64 96 128 !default
         height: 1.5rem
         width: 1.5rem
         left: -.8rem
+        line-height: .75rem
         padding: $timeline-icon-size / 3
         background: $timeline-marker-color
         border: $timeline-marker-border
