Checkradio - Fix issue #6 - Active effect when I have focus on a radio or checkbox

--- a/_sass/checkradio.sass
+++ b/_sass/checkradio.sass
@@ -1,5 +1,6 @@
 $checkbox-radius: $radius !default
 $checkbox-border: .1rem solid $grey-lighter !default
+$checkradio-focus-shadow: inset 0 2px 3px 0 rgba($grey-light, 0.2) !default
 
 =checkbox-size($size)
   $newSize: $size * 1.5
@@ -90,6 +91,11 @@ $checkbox-border: .1rem solid $grey-lighter !default
       &::before
         left: auto
         right: 0
+
+  &:focus
+    + label
+      &::before
+        box-shadow: $checkradio-focus-shadow
 
   &:checked
     + label
