Fix calendar border & click event

--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -1,4 +1,4 @@
-$calendar-border: .1rem solid $white-ter !default
+$calendar-border: none !default
 $calendar-border-radius: $radius-small !default
 $calendar-header-color: $primary !default
 $calendar-date-hover: $white-ter !default
