--- a/_sass/checkradio.sass
+++ b/_sass/checkradio.sass
@@ -50,9 +50,7 @@ $checkradio-top-offset: 0rem !default
 .is-checkbox[type="checkbox"]
   outline: 0
   user-select: none
-  margin-bottom: 0
-  opacity: 0
-  position: absolute
+  display: none
 
   + label
     position: relative
