--- a/_sass/checkradio.sass
+++ b/_sass/checkradio.sass
@@ -139,6 +139,7 @@ $checkradio-top-offset: 0rem !default
         border: none !important
 
   &.is-block
+    display: none !important
     + label
       width: 100% !important
       background: $checkbox-block-background
