--- a/_sass/checkradio.sass
+++ b/_sass/checkradio.sass
@@ -19,8 +19,15 @@ $checkradio-top-offset: 0rem !default
     &::after
       width: $width
       height: $height
-      top: ( ( $newSize / 2 ) - ( $height / 2 ) )
+      top: ( ( $newSize / 2 ) - ( $height / 2 ) ) * 0.9
       left: $height
+
+  &.is-block
+    + label
+      &::after
+        top: ( ( ( $newSize / 2 ) - ( $height / 2 ) ) * 1.3 )
+        left: $height * 1.3
+
   &.is-rtl
     + label
       padding-left: 0
@@ -50,7 +57,9 @@ $checkradio-top-offset: 0rem !default
 .is-checkbox[type="checkbox"]
   outline: 0
   user-select: none
-  display: none
+  display: inline-block
+  position: absolute
+  opacity: 0
 
   + label
     position: relative
