Add integration link on each paeg

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,16 @@
     </section>
 
     {{ content }}
-    
+
+    <section class="section">
+      <div class="container">
+        {% include anchor.html name="Integration" %}
+        <div class="content">
+          <p>Find all integration details on the <a href="{{ site.url }}/bulma-extensions/overview">overview page</a> of this documentation.</p>
+        </div>
+      </div>
+    </section>
+
     <section class="section">
       <div class="container">
         <p class="has-text-centered has-text-grey-light">
