Fix timeline issue #15

--- a/_sass/timeline.sass
+++ b/_sass/timeline.sass
@@ -120,6 +120,7 @@ $dimensions: 16 24 32 48 64 96 128 !default
       justify-content: center
     .timeline-item
       width: 50%
+      justify-content: flex-end
       &:nth-of-type(2n)
         margin-left: 0
         margin-right: calc(#{$timeline-header-width} / 2)
