Fix timeline issue #16

--- a/_sass/timeline.sass
+++ b/_sass/timeline.sass
@@ -1,7 +1,10 @@
+$timeline-marker-size: .8em !default
 $timeline-marker-color: $grey-lighter !default
-$timeline-marker-border: .1em solid $timeline-marker-color !default
+$timeline-marker-icon-size: 1.5em !default
+$timeline-marker-border-size: .1em !default
+$timeline-marker-border: $timeline-marker-border-size solid $timeline-marker-color !default
 $timeline-line-color: $grey-lighter !default
-$timeline-line-width: .1rem !default
+$timeline-line-width: .1em !default
 $timeline-line-style: solid !default
 $timeline-line: $timeline-line-width $timeline-line-style $timeline-line-color !default
 $timeline-content-padding: 1em 0 0 2em !default
@@ -24,7 +27,7 @@ $dimensions: 16 24 32 48 64 96 128 !default
     display: -ms-flexbox
     display: -webkit-flex
     position: relative
-    margin-left: calc(#{$timeline-header-width} / 2)
+    margin-left: $timeline-header-width / 2
     padding-bottom: 2em
     &::before
       content: ""
@@ -43,11 +46,11 @@ $dimensions: 16 24 32 48 64 96 128 !default
       border-radius: 100%
       content: ""
       display: block
-      height: .8rem
-      left: -0.35em
+      height: $timeline-marker-size
+      left: -($timeline-marker-size / 2) + ($timeline-marker-border-size / 2)
       position: absolute
       top: 1.2rem
-      width: .8rem
+      width: $timeline-marker-size
       &.is-image
         @each $dimension in $dimensions
           &.is-#{$dimension}x#{$dimension}
@@ -60,9 +63,9 @@ $dimensions: 16 24 32 48 64 96 128 !default
         display: block
         overflow: hidden
       &.is-icon
-        height: 1.5rem
-        width: 1.5rem
-        left: -.7rem
+        height: $timeline-marker-icon-size
+        width: $timeline-marker-icon-size
+        left: -($timeline-marker-icon-size / 2) + ($timeline-marker-border-size / 2)
         line-height: .75rem
         padding: $timeline-icon-size / 3
         background: $timeline-marker-color
@@ -123,13 +126,13 @@ $dimensions: 16 24 32 48 64 96 128 !default
       justify-content: flex-end
       &:nth-of-type(2n)
         margin-left: 0
-        margin-right: calc(#{$timeline-header-width} / 2)
+        margin-right: $timeline-header-width / 2
         &::before
           right: 0
           left: auto
         .timeline-marker
           left: auto
-          right: -0.35em
+          right: -($timeline-marker-size / 2) + ($timeline-marker-border-size / 2)
           &.is-image
             @each $dimension in $dimensions
               &.is-#{$dimension}x#{$dimension}
@@ -137,7 +140,7 @@ $dimensions: 16 24 32 48 64 96 128 !default
                 right: ( $dimension / 2 ) * -1px
           &.is-icon
             left: auto
-            right: -.8rem
+            right: -($timeline-marker-icon-size / 2) + ($timeline-marker-border-size / 2)
         .timeline-content
           padding: $timeline-rtl-content-padding
           text-align: right
@@ -163,10 +166,10 @@ $dimensions: 16 24 32 48 64 96 128 !default
         right: 0
         left: auto
       margin-left: 0
-      margin-right: calc(#{$timeline-header-width} / 2)
+      margin-right: $timeline-header-width / 2
       .timeline-marker
         left: auto
-        right: -.45em
+        right: -($timeline-marker-size / 2) + ($timeline-marker-border-size / 2)
         &.is-image
           @each $dimension in $dimensions
             &.is-#{$dimension}x#{$dimension}
@@ -174,7 +177,7 @@ $dimensions: 16 24 32 48 64 96 128 !default
               right: ( $dimension / 2 ) * -1px
         &.is-icon
           left: auto
-          right: -.8rem
+          right: -($timeline-marker-icon-size / 2) + ($timeline-marker-border-size / 2)
       .timeline-content
         padding: $timeline-rtl-content-padding
         text-align: right
