--- a/_sass/timeline.sass
+++ b/_sass/timeline.sass
@@ -143,7 +143,7 @@ $dimensions: 16 24 32 48 64 96 128 !default
                 right: ( $dimension / 2 ) * -1px
           &.is-icon
             left: auto
-            right: -(($timeline-marker-icon-size / 2) - $timeline-marker-border-size / 2)
+            right: -(($timeline-marker-icon-size / 2) - $timeline-marker-border-size / 2) + .1em
         .timeline-content
           padding: $timeline-rtl-content-padding
           text-align: right
