--- a/_sass/timeline.sass
+++ b/_sass/timeline.sass
@@ -117,7 +117,7 @@ $dimensions: 16 24 32 48 64 96 128 !default
       $color-invert: nth($pair, 2)
       &.is-#{$name}
         &::before
-          border-left-color: $color
+          background-color: $color
 
   &.is-centered
     .timeline-header
