Add iconPicker sass file

--- a/documentation.sass
+++ b/documentation.sass
@@ -6,6 +6,7 @@
 @import '_sass/calendar.sass'
 @import '_sass/checkradio.sass'
 @import '_sass/divider.sass'
+@import '_sass/iconPicker.sass'
 @import '_sass/pageloader.sass'
 @import '_sass/pricing-table.sass'
 @import '_sass/quickview.sass'
