Add accordion extension

--- a/documentation.sass
+++ b/documentation.sass
@@ -2,6 +2,7 @@
 ---
 @charset "utf-8"
 @import 'bulma/docs/bulma-docs.sass'
+@import '_sass/accordion.sass'
 @import '_sass/badge.sass'
 @import '_sass/calendar.sass'
 @import '_sass/checkradio.sass'
