--- a/_sass/switch.sass
+++ b/_sass/switch.sass
@@ -106,7 +106,9 @@ $switch-paddle-transition: all 0.25s ease-out !default
 .switch[type="checkbox"]
   outline: 0
   user-select: none
-  display: none
+  display: inline-block
+  position: absolute
+  opacity: 0
 
   &[disabled]
     cursor: not-allowed
